[gd_scene load_steps=3 format=3 uid="uid://bal81er17r4dc"]

[ext_resource type="Script" uid="uid://cnsaw24mjo77q" path="res://entities/tank/tank_hud/tank_hud.gd" id="1_1xm3m"]
[ext_resource type="Texture2D" uid="uid://c6q0geftoyjwo" path="res://entities/tank/tank_hud/white_progress_background.png" id="2_667dt"]

[node name="TankHUD" type="Control"]
modulate = Color(1, 1, 1, 0.764706)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -16.0
offset_right = 33.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xm3m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -16.0
offset_right = 52.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 6
text = "BOB"
horizontal_alignment = 1

[node name="TankName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 6
text = "M4A1"
horizontal_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_667dt")
texture_progress = ExtResource("2_667dt")
tint_under = Color(0, 0, 0, 0.501961)
tint_progress = Color(0.458984, 0, 0.031614, 1)

[node name="HealthValue" type="Label" parent="VBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImpactResultType" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "UNPENETRATED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageTicker" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 88.0
offset_top = 10.0
offset_right = 128.0
offset_bottom = 20.6667
theme_override_font_sizes/font_size = 6
text = "-9999"
vertical_alignment = 1
